--- a/views/reusables/nav.ejs
+++ b/views/reusables/nav.ejs
@@ -92,7 +92,7 @@
                 <div class="flex items-center">
                     <a href="/" class="flex items-center gap-2">
                         <img src="/assets/insignia.ico" class="h-8 w-8">
-                        <span class="font-bold text-xl hidden md:block">I.E.I 32004 San Pedro</span>
+                        <span class="font-bold text-md hidden md:block">I.E.I 32004 San Pedro</span>
                     </a>
                 </div>
 
@@ -222,5 +222,23 @@
             }
         });
     </script>
+    <script>
+        // Actualizar el cache automáticamente al cargar la página
+        document.addEventListener("DOMContentLoaded", async () => {
+            try {
+                const res = await fetch("/api/actualizar-cache");
+                // const res = await fetch("/api/actualizar-cache?key=32004SP");
+                // const res = await fetch("https://excelapi-454722.rj.r.appspot.com/api/actualizar-cache");
+                const data = await res.json();
+                if (data.success) {
+                    console.log("✅ Cache actualizado:", data.message);
+                } else {
+                    console.warn("⚠️ No se pudo actualizar:", data.message);
+                }
+            } catch (err) {
+                console.error("❌ Error al actualizar el cache automáticamente:", err);
+            }
+        });
+    </script>  
 </body>
 </html>
