--- a/views/reusables/nav.ejs
+++ b/views/reusables/nav.ejs
@@ -92,7 +92,7 @@
                 <div class="flex items-center">
                     <a href="/" class="flex items-center gap-2">
                         <img src="/assets/insignia.ico" class="h-8 w-8">
-                        <span class="font-bold text-xl hidden md:block">I.E.I 32004 San Pedro</span>
+                        <span class="font-bold text-md hidden md:block">I.E.I 32004 San Pedro</span>
                     </a>
                 </div>
 
