--- a/views/assists.ejs
+++ b/views/assists.ejs
@@ -406,16 +406,16 @@
             });
 
             try {
-                const res = await fetch('/api/assists', {
-                    method: 'POST',
-                    headers: { 'Content-Type': 'application/json' },
-                    body: JSON.stringify({ grado, seccion, fecha, asistencia })
-                });
-                // const res = await fetch('http://localhost:8080/api/assists', {
+                // const res = await fetch('https://excelapi-454722.rj.r.appspot.com/api/assists', {
                 //     method: 'POST',
                 //     headers: { 'Content-Type': 'application/json' },
                 //     body: JSON.stringify({ grado, seccion, fecha, asistencia })
                 // });
+                const res = await fetch('http://localhost:8080/api/assists', {
+                    method: 'POST',
+                    headers: { 'Content-Type': 'application/json' },
+                    body: JSON.stringify({ grado, seccion, fecha, asistencia })
+                });
 
                 const faltanEstados = asistencia.filter(a => !["Presente", "Ausente", "Justificado"].includes(a.estado));
 
